--- a/style.css
+++ b/style.css
@@ -3,11 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 
 body{
     position: relative;
-    height: 100vh;
     width: 100%;
     background: rgb(226, 226, 233);
 }
@@ -108,37 +108,43 @@ nav span{
     color: rgb(155, 4, 4);
 }
 
-section{
+
+.banner{
     display: flex;
     justify-content: center;
-    align-items: flex-start;
-    position: absolute;
-    top:0;
-    left: 270px;
-    height: 100vh;
-    width: calc(100% - 270px);
-    padding: 30px;
-    transition: ease-in 0.3s;
+    background-color: black;
 }
 
-section.expand{
-    width: 100%;
-    left: 0;
-}
 
-section h1{
-    color: rgb(0, 0, 0);
-    font-size: 32px;
+
+.grand {
+    display: flex;
+    background-color: black;
+    color: white;
+  }
+  
+  .left {
+    flex: 1;
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .right {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+  }
+
+h2{
     text-align: center;
 }
 
-section h1.dark-mode{
-    color: white;
+.products{
+    background-color: red;
+    text-align: center;   
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
-
-
-.banner{
-    background-color: rgba(0, 0, 0, 0.9);
-    height: 204.8px;
-} 
-
